Fixed height problems with sidebar overflowing at the bottom

--- a/client/src/styles/_navbar_variables.scss
+++ b/client/src/styles/_navbar_variables.scss
@@ -7,7 +7,7 @@ $desktop-icon-nav-width: 4rem;
 $mobile-nav-width: 200px;
 $desktop-nav-width: 10rem;
 
-$list-gap: 1rem;
+$list-gap: 0.25rem;
 
 $list-margin-top: 1rem;
 
