--- a/client/src/styles/components/_nav.scss
+++ b/client/src/styles/components/_nav.scss
@@ -76,7 +76,7 @@ nav {
     z-index: 9;
 
     width: $desktop-nav-width;
-    height: 100vh;;
+    height: 100vh;
     padding-top: $header-height;
   }
 
@@ -94,7 +94,7 @@ nav {
 
     width: 100%;
     height: 100%;
-    margin-top: $list-margin-top;
+    margin-top: 0;
   }
 
   nav>ul>li {
